Create index.html for my-project GitHub Pages

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<div> 
 <h1>Hello!</h1>
 <h2>I'm Evan I've Been Alive For Like 1 Second</h2>
 <h3>Not Only That But I Love My Dog</h3>
-</div>
+<h4>kfjepfjpojf</h4>
+<h5>weihfiehfoihfoi</h5>
+<h6>ewohfoiweoijpfjepwf</h6>
